Fix svg overflow in feed onboarding

--- a/app/styles/components/_checklist.scss
+++ b/app/styles/components/_checklist.scss
@@ -16,6 +16,9 @@
   .steps-remaining {
     font-size: 14px;
     margin-bottom: 15px;
+    svg {
+      width: 100%;
+    }
   }
 }
 
